--- a/package.json
+++ b/package.json
@@ -11,6 +11,27 @@
   "author": "Sidd Sridharan <sidd@sidd.com> (http://sidd.com)",
   "license": "ISC",
   "devDependencies": {
-    "standard": "^5.4.1"
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.0",
+    "node-reset-scss": "^1.0.1",
+    "node-sass": "^3.4.2",
+    "react-hot-loader": "^1.3.0",
+    "resolve-url-loader": "^1.4.2",
+    "sass-loader": "^3.1.2",
+    "standard": "^5.4.1",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "classnames": "^2.2.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "redux": "^3.0.4"
   }
 }
