--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "classnames": "^2.2.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "redux": "^3.0.4"
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
+    "redux-promise-middleware": "^2.3.1"
   }
 }
