--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "(WIP) minimal & modular front-end for bittorrent + webtorrent daemons",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "sidd/serene",
@@ -34,6 +35,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
-    "redux-promise-middleware": "^2.3.1"
+    "redux-promise-middleware": "^2.3.1",
+    "serene-rtorrent": "file:../serene-rtorrent"
   }
 }
