--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.0",
+    "file-loader": "^0.8.5",
+    "font-awesome": "^4.5.0",
     "node-reset-scss": "^1.0.1",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
@@ -30,12 +32,19 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "bytes": "^2.2.0",
     "classnames": "^2.2.1",
+    "deep-assign": "git://github.com/sidd/deep-assign.git",
+    "humanize-duration": "^3.4.0",
+    "normalizr": "^1.4.0",
     "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-promise-middleware": "^2.3.1",
+    "redux-thunk": "^1.0.2",
+    "reselect": "^2.0.1",
     "serene-rtorrent": "file:../serene-rtorrent"
   }
 }
