--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "provider:add": "npm install -g --prefix ./plugins",
+    "provider:install": "npm run provider:add",
+    "provider:remove": "npm remove -g --prefix ./plugins",
+    "build": "NODE_ENV=production webpack -p"
   },
   "repository": "sidd/serene",
-  "keywords": [],
+  "keywords": [
+    "serene",
+    "torrent",
+    "bittorrent",
+    "webtorrent",
+    "webui"
+  ],
   "author": "Sidd Sridharan <sidd@sidd.com> (http://sidd.com)",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel": "^6.3.13",
     "babel-core": "^6.3.15",
@@ -44,7 +54,6 @@
     "redux": "^3.0.4",
     "redux-promise-middleware": "^2.3.1",
     "redux-thunk": "^1.0.2",
-    "reselect": "^2.0.1",
-    "serene-rtorrent": "file:../serene-rtorrent"
+    "reselect": "^2.0.1"
   }
 }
