--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
+    "json-loader": "^0.5.4",
     "node-reset-scss": "^1.0.1",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
