--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "normalizr": "^1.4.0",
     "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.3",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.2",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
