--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "provider:add": "npm install -g --prefix ./plugins",
     "provider:install": "npm run provider:add",
     "provider:remove": "npm remove -g --prefix ./plugins",
-    "build": "NODE_ENV=production webpack -p",
-    "postinstall": "cd node_modules/webpack/node_modules/node-libs-browser && npm install buffer@^4.1.0"
+    "build": "NODE_ENV=production webpack -p"
   },
   "repository": "sidd/serene",
   "keywords": [
@@ -32,6 +31,7 @@
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
     "json-loader": "^0.5.4",
+    "node-libs-browser": "git+https://github.com/sidd/node-libs-browser.git",
     "node-reset-scss": "^1.0.1",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
@@ -48,6 +48,7 @@
     "classnames": "^2.2.1",
     "deep-assign": "git://github.com/sidd/deep-assign.git",
     "humanize-duration": "^3.4.0",
+    "node-libs-browser": "git+https://github.com/sidd/node-libs-browser.git",
     "normalizr": "^1.4.0",
     "parse-torrent": "^5.7.0",
     "react": "^0.14.3",
@@ -59,6 +60,7 @@
     "redux": "^3.0.4",
     "redux-promise-middleware": "^2.3.1",
     "redux-thunk": "^1.0.2",
-    "reselect": "^2.0.1"
+    "reselect": "^2.0.1",
+    "webpack": "^1.12.11"
   }
 }
