--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.4.2",
     "sass-loader": "^3.1.2",
-    "standard": "^5.4.1",
+    "standard-loader": "git+https://github.com/timoxley/standard-loader.git",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
+    "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
@@ -60,7 +60,6 @@
     "redux": "^3.0.4",
     "redux-promise-middleware": "^2.3.1",
     "redux-thunk": "^1.0.2",
-    "reselect": "^2.0.1",
-    "webpack": "^1.12.11"
+    "reselect": "^2.0.1"
   }
 }
