--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "provider:remove": "npm remove -g --prefix ./plugins",
     "build": "NODE_ENV=production webpack -p"
   },
-  "repository": "sidd/serene",
+  "repository": "https://github.com/sidd/serene",
   "keywords": [
     "serene",
     "torrent",
